--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,6 +20,6 @@ jobs:
       - run: npm ci
       - run: npm install
       - run: npm run build
-      - run: npm publish --access public
+      - run: npm publish --access public --otp=3382876452939035
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_RELEASE_CLI_0 }}
